# mdv_cpp_lib

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test.yml  documentation.yml  ros2-build.yml
cmake/: CMakeLists.txt  autodiff.cmake  install_dependencies.sh  matplotlibcpp.cmake  nlohmann_json.cmake  open3d.cmake  range-v3.cmake
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/type_erasure/: CMakeLists.txt  type_erasure.rst
docs/type_erasure/src/: concept_polymorphism.cpp  dynamic_polymorphism.cpp  template_polymorphism.cpp  value_based_polymorphism.cpp
executables/dmp/: CMakeLists.txt  mesh_dmp.cpp  s3_test.cpp  scalar_test.cpp
executables/mesh/: CMakeLists.txt  mesh_visualiser.cpp
include/mdv/: config.hpp  config.hpp.in  defines.hpp  eigen_defines.hpp  macros.hpp  rerun.hpp
include/mdv/containers/: demonstration.hpp  multi_vector.hpp
include/mdv/dmp/: dmp.hpp  dmp_utilities.hpp
include/mdv/dmp/coordinate_system/: coordinate_system.hpp  exponential_cs.hpp
include/mdv/dmp/transformation_system/: transformation_system.hpp
include/mdv/mesh/: algorithm.hpp  cgal_data.hpp  cgal_impl.hpp  conditions.hpp  eigen_data.hpp  face.hpp  fwd.hpp  index_element.hpp  mesh.hpp  mesh_data.hpp  mesh_element.hpp  mesh_iterator.hpp  point.hpp  rerun.hpp  tangent_vector.hpp  uv_map.hpp  vertex.hpp
include/mdv/riemann_geometry/: euclidean.hpp  hypershere.hpp  manifold.hpp  mesh.hpp  s3.hpp  scalar.hpp  se3.hpp
include/mdv/utils/: concepts.hpp  conditions.hpp  conversions.hpp  filesystem.hpp  logging.hpp  logging_extras.hpp
scripts/: arch_docker.sh  auto_build.sh  format.sh  ubuntu_docker.sh
src/: CMakeLists.txt  rerun.cpp  rerun.cpp.orig
src/dmp/: CMakeLists.txt  dmp.cpp
src/dmp/coordinate_system/: exponential_cs.cpp
src/mesh/: CMakeLists.txt  algorithm.cpp  cgal_impl.cpp  cgal_mesh.cpp  conditions.cpp  eigen_data.cpp  face.cpp  mesh.cpp  mesh_data.cpp  mesh_element.cpp  point.cpp  rerun.cpp  tangent_vector.cpp  vertex.cpp
src/mesh/include/: cgal_data.hpp
src/riemann_geometry/: CMakeLists.txt  mesh.cpp  s3.cpp
src/utils/: CMakeLists.txt  logging.cpp  logging_extras.cpp
tests/: iterator.cpp
unit_tests/: cgal_mesh.cpp  conditions.cpp  conversions.cpp  coordinate_systems.cpp  demonstration.cpp  dmp.cpp  hypersphere.cpp  mesh_point.cpp  multi_vector.cpp  tangent_vector.cpp  uv_map.cpp
